testsuite/tests/saks/should_fail/T16727a.stderr

T16727a.hs:8:12: error: [GHC-85413]
    • Type constructor ‘T1’ cannot be used here
        (it is defined and used in the same recursive group)
    • In a standalone kind signature for ‘T2’: T1
